# eventfd-rust

./: Cargo.toml  README.md
src/: lib.rs
