[package]

name = "eventfd"
version = "0.2.0"
authors = ["Jeremy Fitzhardinge <jeremy@goop.org>", "Valentino Volonghi <dialtone@gmail.com>"]
description = "Binding to Linux's eventfd syscall"
repository = "https://github.com/dialtone/eventfd-rust.git"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
nix = "0.14"
